Add github boilerplate

--- a/contact.html
+++ b/contact.html
@@ -69,19 +69,19 @@
                   >
                 </li>
                 <li
+                  class="col-6 col-sm-3 ui-menu-color-github list-inline-item menuitem"
+                >
+                  <a href="github.html" class="hvr-icon-buzz-out"
+                    ><i class="fa fa-github hvr-icon" aria-hidden="true"></i
+                    ><span>GitHub</span></a
+                  >
+                </li>
+                <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
                   <a href="contact.html" class="hvr-icon-buzz-out"
                     ><i class="fa fa-comment-o hvr-icon" aria-hidden="true"></i
                     ><span class="border-bottom">Contact</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
-                >
-                  <a href="assets/cv/cv.pdf" target="_blank" class="hvr-icon-buzz-out"
-                    ><i class="fa fa-download hvr-icon" aria-hidden="true"></i
-                    ><span>Download</span></a
                   >
                 </li>
               </ul>
@@ -100,7 +100,7 @@
           <h5 class="uppercase text-center">Let's work together</h5>
           <div class="form-row">
             <div
-              class="col-10 offset-1 col-md-8 offset-md-2 center-form pt-2 pt-md-3 my-0 mx-auto"
+              class="col-10 col-md-8 col-lg-6 pt-2 pt-md-3 my-0 mx-auto"
             >
               <form>
                 <input
@@ -149,7 +149,7 @@
           <p class="inline-block">
             Full Stack Software Developer
             <br />
-            Python: Django | JS: Vue.js
+            Python: Django | JS: Vue.js, jQuery
             <br />
             HTML5 | CSS3: Bootstrap
             <br />
