--- a/resume.html
+++ b/resume.html
@@ -69,19 +69,19 @@
                   >
                 </li>
                 <li
+                  class="col-6 col-sm-3 ui-menu-color-github list-inline-item menuitem"
+                >
+                  <a href="github.html" class="hvr-icon-buzz-out"
+                    ><i class="fa fa-github hvr-icon" aria-hidden="true"></i
+                    ><span>GitHub</span></a
+                  >
+                </li>
+                <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
                   <a href="contact.html" class="hvr-icon-buzz-out"
                     ><i class="fa fa-comment-o hvr-icon" aria-hidden="true"></i
                     ><span>Contact</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
-                >
-                  <a href="assets/cv/cv.pdf" target="_blank" class="hvr-icon-buzz-out"
-                    ><i class="fa fa-download hvr-icon" aria-hidden="true"></i
-                    ><span>Download</span></a
                   >
                 </li>
               </ul>
@@ -147,7 +147,7 @@
                       usability and UX (user experience).
                     </li>
                     <li>
-                      Strong understanding of HTML, CSS, and JavaScript, and
+                      Strong understanding of HTML, CSS, JavaScript and jQuery, and
                       ability to write clean and maintainable code.
                     </li>
                     <li>
@@ -292,7 +292,7 @@
           <p class="inline-block">
             Full Stack Software Developer
             <br />
-            Python: Django | JS: Vue.js
+            Python: Django | JS: Vue.js, jQuery
             <br />
             HTML5 | CSS3: Bootstrap
             <br />
