--- a/github.html
+++ b/github.html
@@ -28,6 +28,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/github-styles.css" type="text/css" />
 
     <title>Software Developer Resume - Pavlo Myskov</title>
   </head>
@@ -93,9 +94,9 @@
     </header>
 
     <section class="container-fluid">
-      <div class="row bg-color-contact">
+      <div class="row my-4 bg-color-contact">
         <div class="col">
-          <h3 class="contact-heading uppercase text-center">
+          <h3 class="contact-heading uppercase text-center mb-2">
             View My GitHub Projects
           </h3>
           <h5 class="uppercase text-center">
