--- a/github.html
+++ b/github.html
@@ -103,7 +103,7 @@
             You can also search on other user profiles
           </h5>
 
-          <div class="col-sm-10 col-md-8 col-xl-6 pt-2 pb-md-2 pt-md-3 my-0 mx-auto">
+          <div id="github" class="col-sm-10 col-md-8 col-xl-6 pt-2 pb-md-2 pt-md-3 my-0 mx-auto">
               <input
                 class="mb-2"
                 type="text"
