--- a/github.html
+++ b/github.html
@@ -108,7 +108,7 @@
                 class="mb-2"
                 type="text"
                 id="gh-username"
-                value="octocat"
+                value="flashdrag"
                 oninput="fetchGitHubInformation()"
               />
             <div id="gh-user-data"></div>
