Throttle execution of `fetchGitHubInformation` func

--- a/github.html
+++ b/github.html
@@ -109,7 +109,7 @@
                 type="text"
                 id="gh-username"
                 value="flashdrag"
-                oninput="fetchGitHubInformation()"
+                oninput="throttledOnInput()"
               />
             <div id="gh-user-data"></div>
             <div id="gh-repo-data"></div>
