--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
           <h5 class="uppercase text-center">Let's work together</h5>
           <div class="form-row">
             <div class="col-10 col-md-8 col-lg-6 pt-2 pt-md-3 my-0 mx-auto">
-              <form onsubmit="return sendMail(this);">
+              <form id="contactForm">
                 <input
                   type="text"
                   name="name"
@@ -208,12 +208,15 @@
       crossorigin="anonymous"
     ></script>
     <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
     ></script>
     <script
-      type="text/javascript"
-      src="assets/js/email.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+      crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="assets/js/email.js"></script>
   </body>
 </html>
