--- a/github.html
+++ b/github.html
@@ -15,6 +15,19 @@
     />
 
     <link
+      type="image/png"
+      sizes="16x16"
+      rel="icon"
+      href="assets/images/favicon-16.png"
+    />
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="assets/images/favicon-32.png"
+    />
+
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
@@ -28,7 +41,11 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/github-styles.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="assets/css/github-styles.css"
+      type="text/css"
+    />
 
     <title>Software Developer Resume - Pavlo Myskov</title>
   </head>
@@ -103,14 +120,17 @@
             You can also search on other user profiles
           </h5>
 
-          <div id="github" class="col-sm-10 col-md-8 col-xl-6 pt-2 pb-md-2 pt-md-3 my-0 mx-auto">
-              <input
-                class="mb-2"
-                type="text"
-                id="gh-username"
-                value="flashdrag"
-                oninput="throttledOnInput()"
-              />
+          <div
+            id="github"
+            class="col-sm-10 col-md-8 col-xl-6 pt-2 pb-md-2 pt-md-3 my-0 mx-auto"
+          >
+            <input
+              class="mb-2"
+              type="text"
+              id="gh-username"
+              value="flashdrag"
+              oninput="throttledOnInput()"
+            />
             <div id="gh-user-data"></div>
             <div id="gh-repo-data"></div>
           </div>
