--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,19 @@
     />
 
     <link
+      type="image/png"
+      sizes="16x16"
+      rel="icon"
+      href="assets/images/favicon-16.png"
+    />
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="assets/images/favicon-32.png"
+    />
+
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
@@ -147,8 +160,8 @@
                       usability and UX (user experience).
                     </li>
                     <li>
-                      Strong understanding of HTML, CSS, JavaScript and jQuery, and
-                      ability to write clean and maintainable code.
+                      Strong understanding of HTML, CSS, JavaScript and jQuery,
+                      and ability to write clean and maintainable code.
                     </li>
                     <li>
                       Skilled in developing responsive and accessible web
