Remove vue.js words

--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
           <p class="inline-block">
             Full Stack Software Developer
             <br />
-            Python: Django | JS: Vue.js, jQuery
+            Python: Django, Flask | JS: jQuery
             <br />
             HTML5 | CSS3: Bootstrap
             <br />
