--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
                   <p>
                     I use the latest technologies and development approaches,
                     including Agile methodologies, Django Python framework for
-                    robust and scalable back-end systems and APIs, Vue JS
-                    library for high-quality front-end interfaces, and Bootstrap
+                    robust and scalable web applications, Bootstrap
                     CSS framework for modern and responsive mobile-first web
                     applications. I am also experienced in using SQL database
                     management systems and Docker for containerization to deploy
@@ -220,7 +219,7 @@
           <p class="inline-block">
             Full Stack Software Developer
             <br />
-            Python: Django | JS: Vue.js, jQuery
+            Python: Django, Flask | JS: jQuery
             <br />
             HTML5 | CSS3: Bootstrap
             <br />
