--- a/resume.html
+++ b/resume.html
@@ -160,7 +160,7 @@
                       usability and UX (user experience).
                     </li>
                     <li>
-                      Strong understanding of HTML, CSS, JavaScript and jQuery,
+                      Strong understanding of HTML and CSS
                       and ability to write clean and maintainable code.
                     </li>
                     <li>
@@ -169,7 +169,7 @@
                     </li>
                     <li>
                       Proficient in building dynamic and interactive user
-                      interfaces using Vue JS framework.
+                      interfaces using jQuery and AJAX.
                     </li>
                     <li>
                       Knowledgeable in implementing client-side validation and
@@ -191,13 +191,8 @@
                   <h4 class="three-reasons-heading uppercase">Back End</h4>
                   <ul class="p-0">
                     <li>
-                      Proficient in developing robust and scalable back-end
-                      systems and RESTful APIs using Django Python framework.
-                    </li>
-                    <li>
-                      Experienced in implementing data validation and
-                      verification techniques with Pydantic to ensure data
-                      accuracy, consistency, and integrity.
+                      Proficient in developing robust and scalable web applications
+                      using Django and Flask web frameworks.
                     </li>
                     <li>
                       Skilled in working with SQL database management systems
@@ -241,9 +236,9 @@
                   aria-valuenow="70"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 70%"
+                  style="width: 80%"
                 >
-                  <span class="sr-only">70% Complete</span>
+                  <span class="sr-only">80% Complete</span>
                   <span class="text-left pl-2 progress-item"
                     >CSS / CSS3 / Bootstrap</span
                   >
@@ -260,7 +255,7 @@
                 >
                   <span class="sr-only">60% Complete</span>
                   <span class="text-left pl-2 progress-item"
-                    >Java Script / Vue.js</span
+                    >Java Script / jQuery</span
                   >
                 </div>
               </div>
@@ -271,9 +266,9 @@
                   aria-valuenow="80"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 80%"
+                  style="width: 75%"
                 >
-                  <span class="sr-only">80% Complete</span>
+                  <span class="sr-only">75% Complete</span>
                   <span class="text-left pl-2 progress-item"
                     >Python / Django</span
                   >
@@ -286,9 +281,9 @@
                   aria-valuenow="50"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 50%"
+                  style="width: 70%"
                 >
-                  <span class="sr-only">50% Complete</span>
+                  <span class="sr-only">70% Complete</span>
                   <span class="text-left pl-2 progress-item">SQL / NoSQL</span>
                 </div>
               </div>
@@ -305,7 +300,7 @@
           <p class="inline-block">
             Full Stack Software Developer
             <br />
-            Python: Django | JS: Vue.js, jQuery
+            Python: Django, Flask | JS: jQuery
             <br />
             HTML5 | CSS3: Bootstrap
             <br />
