--- a/github.html
+++ b/github.html
@@ -158,7 +158,7 @@
             Need a printable version of my CV?
             <br />
             Download it here.
-            <a href="assets/cv/cv.pdf" target="_blank" class="cv-pdf">
+            <a href="assets/cv/cv-pavlo-myskov.pdf" target="_blank" class="cv-pdf">
               <i class="fa fa-download" aria-hidden="true"></i>
               <!-- as fontawesome icon is hidden for scr readers, we add span with text for screen readers only -->
               <span class="sr-only">Download link</span>
