Add email and linkedin contacts

--- a/index.html
+++ b/index.html
@@ -130,10 +130,26 @@
           </div>
           <div class="pesonal-info-item">
             <div class="key">
+              <p class="uppercase">Email:</p>
+            </div>
+            <div class="value">
+              <a href="mailto:flashdrag@gmail.com" class="text-info">flashdrag@gmail.com</a>
+            </div>
+          </div>
+          <div class="pesonal-info-item">
+            <div class="key">
+              <p class="uppercase">LinkedIn:</p>
+            </div>
+            <div class="value">
+              <a href="https://www.linkedin.com/in/pavlo-myskov/" class="text-info">LinkedIn.com/in/pavlo-myskov</a>
+            </div>
+          </div>
+          <div class="pesonal-info-item">
+            <div class="key">
               <p class="uppercase">Telegram:</p>
             </div>
             <div class="value">
-              <p>@FlashDrag</p>
+              <a href="https://t.me/DateCalcBot" class="text-info">@FlashDrag</a>
             </div>
           </div>
         </div>
