Add projects and download cv nav btns

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
               <!-- class that displays the list horizontally -->
               <ul id="nav" class="list-inline menucontainer">
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
+                  class="col-4 col-sm-2 col-md-4 col-lg-2 ui-menu-color-home list-inline-item menuitem"
                 >
                   <a href="index.html" class="hvr-icon-buzz-out"
                     ><i class="fa fa-home hvr-icon" aria-hidden="true"></i
@@ -71,7 +71,7 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
+                  class="col-4 col-sm-2 col-md-4 col-lg-2 ui-menu-color-resume list-inline-item menuitem"
                 >
                   <a href="resume.html" class="hvr-icon-buzz-out"
                     ><i
@@ -82,7 +82,15 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-github list-inline-item menuitem"
+                  class="col-4 col-sm-2 col-md-4 col-lg-2 ui-menu-color-projects list-inline-item menuitem"
+                >
+                  <a href="projects.html" class="hvr-icon-buzz-out"
+                    ><i class="fa fa-briefcase hvr-icon" aria-hidden="true"></i
+                    ><span>Projects</span></a
+                  >
+                </li>
+                <li
+                  class="col-4 col-sm-2 col-md-4 col-lg-2 ui-menu-color-github list-inline-item menuitem"
                 >
                   <a href="github.html" class="hvr-icon-buzz-out"
                     ><i class="fa fa-github hvr-icon" aria-hidden="true"></i
@@ -90,11 +98,22 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
+                  class="col-4 col-sm-2 col-md-4 col-lg-2 ui-menu-color-contact list-inline-item menuitem"
                 >
                   <a href="contact.html" class="hvr-icon-buzz-out"
                     ><i class="fa fa-comment-o hvr-icon" aria-hidden="true"></i
                     ><span class="border-bottom">Contact</span></a
+                  >
+                </li>
+                <li
+                  class="col-4 col-sm-2 col-md-4 col-lg-2 ui-menu-color-download list-inline-item menuitem"
+                >
+                  <a
+                    href="assets/cv/cv-pavlo-myskov.pdf"
+                    target="_blank"
+                    class="hvr-icon-buzz-out"
+                    ><i class="fa fa-download hvr-icon" aria-hidden="true"></i
+                    ><span>Download CV</span></a
                   >
                 </li>
               </ul>
