Add `target=_blank` to projects links

--- a/projects.html
+++ b/projects.html
@@ -87,8 +87,8 @@
               <h5>WordWheel</h5>
               <p>The Word Wheel is JavaScript educational game in which a user guesses words by their definitions.</p>
               <p><strong>TechStack: </strong>JavaScript, HTML5, CSS3, Wireframing, UX Design, Fetch API, Git, GitHub</p>
-              <a href="http://wordwheel.me/" class="badge badge-warning">Live Demo</a>
-              <a href="http://github.com/FlashDrag/word-wheel" class="badge badge-info">Repo</a>
+              <a href="http://wordwheel.me/" target="_blank" class="badge badge-warning">Live Demo</a>
+              <a href="http://github.com/FlashDrag/word-wheel" target="_blank" class="badge badge-info">Repo</a>
             </li>
             <li class="list-group-item">
               <h5>Library Management System</h5>
@@ -96,16 +96,16 @@
               </p>
               <p><strong>TechStack: </strong>Python, Google Spreadsheets API, Microsoft Visio(flowchart), Heroku, Git,
                 GitHub</p>
-              <a href="http://library-management-system.herokuapp.com" class="badge badge-warning">Live Demo</a>
-              <a href="http://github.com/FlashDrag/library-management-system" class="badge badge-info">Repo</a>
+              <a href="http://library-management-system.herokuapp.com" target="_blank" class="badge badge-warning">Live Demo</a>
+              <a href="http://github.com/FlashDrag/library-management-system" target="_blank" class="badge badge-info">Repo</a>
             </li>
             <li class="list-group-item">
               <h5>Barber Shop</h5>
               <p>The website provides users with information about barbershop services and their costs.
                 The user can book a date and time for a haircut and/or other available service.</p>
               <p><strong>TechStack: </strong>HTML5, CSS3, Wireframing, UX Design, Git, GitHub, Adobe Photoshop</p>
-              <a href="http://flashdrag.github.io/barber-shop" class="badge badge-warning">Live Demo</a>
-              <a href="http://github.com/FlashDrag/barber-shop" class="badge badge-info">Repo</a>
+              <a href="http://flashdrag.github.io/barber-shop" target="_blank" class="badge badge-warning">Live Demo</a>
+              <a href="http://github.com/FlashDrag/barber-shop" target="_blank" class="badge badge-info">Repo</a>
             </li>
             <li class="list-group-item">
               <h5>Get a Job <small>(currently being developed)</small></h5>
@@ -113,22 +113,22 @@
                 candidates.</p>
               <p><strong>TechStack: </strong>Python: Django, PostgreSQL, HTML5, CSS3, Bootstrap, CI/CD, Heroku, Scrum,
                 Wireframing, Database Architect, UX Design, Git, GitHub, AWS</p>
-              <a href="https://get-job.herokuapp.com" class="badge badge-warning">Live Demo</a>
-              <a href="https://github.com/FlashDrag/get-job" class="badge badge-info">Repo</a>
+              <a href="https://get-job.herokuapp.com" target="_blank" class="badge badge-warning">Live Demo</a>
+              <a href="https://github.com/FlashDrag/get-job" target="_blank" class="badge badge-info">Repo</a>
             </li>
             <li class="list-group-item">
               <h5>DateTime Calculator</h5>
               <p>Telegram Bot is written in Python using the Aiogram framework and date/time libraries.
                 Calculates the difference between two dates in different units of time and their combinations.</p>
               <p><strong>TechStack: </strong>Python framework Aiogram</p>
-              <a href="https://t.me/DateCalcBot" class="badge badge-warning">Live Demo</a>
-              <a href="https://github.com/FlashDrag/DateCalcBot" class="badge badge-info">Repo</a>
+              <a href="https://t.me/DateCalcBot" target="_blank" class="badge badge-warning">Live Demo</a>
+              <a href="https://github.com/FlashDrag/DateCalcBot" target="_blank" class="badge badge-info">Repo</a>
             </li>
             <li class="list-group-item">
               <h5>Other Study Projects</h5>
               <p>A collection of other various projects created during my studies.</p>
               <p><strong>TechStack: </strong>HTML5, CSS3, Bootstrap, JavaScript, Python, SQL, Flask, Django</p>
-              <a href="https://github.com/FlashDrag/study-projects" class="badge badge-info">Repo</a>
+              <a href="https://github.com/FlashDrag/study-projects" target="_blank" class="badge badge-info">Repo</a>
             </li>
           </ul>
         </div>
